<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A4A4A"
    android:orientation="vertical"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="140dp"
    android:layout_marginBottom="80dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:text="@string/minutes" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:text="@string/seconds" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:text="@string/milliseconds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="13dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        >

        <EditText
            android:id="@+id/timeMinutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#919191"
            android:ems="10"
            android:inputType="number"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colon"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/timeSeconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#919191"
            android:ems="10"
            android:inputType="number"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colon"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/timeMilliseconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#919191"
            android:ems="10"
            android:inputType="number"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/declineBT"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:backgroundTint="#919191"
            android:shadowColor="#fff"
            android:text="@string/decline"
            android:textColor="#4A4A4A"
            android:textSize="17sp" />

        <Button
            android:id="@+id/acceptBT"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:backgroundTint="#919191"
            android:text="@string/apply"
            android:textColor="#4A4A4A"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/deleteBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:height="60dp"
            android:backgroundTint="#8f000c"
            android:text="@string/delete_time"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>