<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="140dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="80dp"
    android:background="#4A4A4A"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/confirm_deleting_all_data"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/confirm_deleting_delete"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:backgroundTint="#8f000c"
            android:shadowColor="#fff"
            android:text="@string/delete_all_data"
            android:textColor="#fff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/confirm_deleting_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:backgroundTint="#919191"
            android:text="@string/cancel_deleting_times"
            android:textColor="#4A4A4A"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>